always-restart-policy.yml
apiVersion: v1
kind: Pod
metadata:
  name: always-restart-policy
spec:
  restartPolicy: Always
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'sleep 10']
