init-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.19.1
