liveliness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: live-ness-probe
spec:
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'while true; do sleep 3600; done']
      livenessProbe:
        exec:
          command: ["echo", "hello world!"]
        initialDelaySeconds: 5
        periodSeconds: 5
