my-deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
    - name: nginx
      image: nginx:1.19.1
      ports:
      - containerPort: 80
