node-selector-nodename.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-selector-nodename
spec:
  nodeSelector:
    special: "true"
    containers:
    - name: nginx
      image: nginx:1.19.1
