nodename-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: mynode.server.com
  containers:
    - name: nginx
      image: nginx:1.19.1
