on-failure-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: on-failure-policy
spec:
  restartPolicy: OnFailure
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'sleep 10']
