readiness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  containers:
    - name: readiness-probe
      image: nginx
      readinessProbe:
          httpGet:
          path: /
          port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
