sample-shipping-data.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 7ae6e423717d2d64179f90895af464c40fd5104d927b3a0960afc06303f77f37
    cni.projectcalico.org/podIP: 192.168.194.66/32
    cni.projectcalico.org/podIPs: 192.168.194.66/32
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"beebox-shipping-data","namespace":"default"},"spec":{"containers":[{"image":"linuxacademycontent/random-crashing-web-server:1","name":"shipping-data"}],"restartPolicy":"Never"}}
  creationTimestamp: "2023-05-13T17:37:25Z"
  name: beebox-shipping-data
  namespace: default
  resourceVersion: "711"
  uid: 8d8503f4-9b74-4b5c-ba91-d8ca50bb3327
spec:
  containers:
  - image: linuxacademycontent/random-crashing-web-server:1
    imagePullPolicy: IfNotPresent
    name: shipping-data
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-sbwl6
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-worker1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-sbwl6
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-05-13T17:37:49Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-05-13T17:37:59Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-05-13T17:37:59Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-05-13T17:37:50Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://2679e4a4bbc099887ce957c6ea3ba0657ab9c00d1c0b62a236bb048ffb9b7b7e
    image: docker.io/linuxacademycontent/random-crashing-web-server:1
    imageID: docker.io/linuxacademycontent/random-crashing-web-server@sha256:961fb2f1241af9bd1de39d62aaac28a55fa0ec215b86a0c1f67c49a13cbcd0e2
    lastState: {}
    name: shipping-data
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-05-13T17:37:58Z"
  hostIP: 10.0.1.102
  phase: Running
  podIP: 192.168.194.66
  podIPs:
  - ip: 192.168.194.66
  qosClass: BestEffort
  startTime: "2023-05-13T17:37:49Z"
